# Road-Surface-Condition-CNN

./: .gitignore  README.md  Road-CNN.ipynb  pyproject.toml  requirements.txt  training_log.txt
code/: evaluation.py  inference.py  loading_data.py  main.ipynb  model.py  prepare_data.py  traing.py  training.py  training_task.md  visualizations.py
data_set/: .gitignore
datasets/: accepted.md  amr.md  ragab.md  youssef.md
logs/: evaluation.txt  training.txt
notebooks/: Road-CNN.ipynb  main.ipynb
report/: report.typ  template.typ
results/: training_history.csv
