[project]
name = "road-surface-condition-cnn"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "keras>=3.12.0",
  "matplotlib>=3.9.4",
  "notebook>=7.5.0",
  "opencv-python>=4.12.0.88",
  "scikit-learn>=1.8.0",
  "seaborn>=0.13.2",
  "tensorflow>=2.20.0",
]
